--- a/styles/globals.css
+++ b/styles/globals.css
@@ -16,6 +16,16 @@ body {
   font-family: -apple-system, BlinkMacSystemFont, Segoe UI, Roboto, Oxygen, Ubuntu, Cantarell, Fira Sans, Droid Sans, Helvetica Neue, sans-serif;
 }
 
+body {
+  background-image: url("../public/bg.png");
+}
+.glass {
+  background: rgba(255, 255, 255, 0.063);
+  box-shadow: 0 8px 32px 0 rgba(196, 196, 196, 0.219);
+  backdrop-filter: blur(2.5px);
+  -webkit-backdrop-filter: blur(2.5px);
+  border: 1px solid rgba(255, 255, 255, 0.18);
+}
 a {
   color: inherit;
   text-decoration: none;
@@ -23,4 +33,16 @@ a {
 
 li {
   list-style: none;
+}
+
+.footer__text {
+  margin-top: 1rem;
+  text-align: center;
+
+  font-family: "Segoe UI", Tahoma, Geneva, Verdana, sans-serif;
+}
+
+.footer__logo--svg {
+  width: 2.4rem;
+  margin: 0.2rem;
 }
